<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbServer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/server" />

        <RadioButton
            android:id="@+id/rbClient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/client" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textSize="20sp"
            android:text="@string/service_name" />

        <EditText
            android:id="@+id/editServiceName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp"
            android:text=""
            android:autofillHints="service name" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvWifiAwareSession"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:text="@string/wifiawaresession" />

    <TextView
        android:id="@+id/tvPeerHandle"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/peerhandle" />

    <TextView
        android:id="@+id/tvPublishDiscoverySession"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:text="@string/publish_discovery_session" />

    <TextView
        android:id="@+id/tvSubscribeDiscoverySession"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/subscribe_discovery_session" />

    <TextView
        android:id="@+id/tvServerSocketThread"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:text="@string/serversocketthread" />

    <TextView
        android:id="@+id/tvClientSocketThread"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:text="@string/clientsocketthread" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnConnect"
            android:layout_marginHorizontal="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/connect" />

        <Button
            android:id="@+id/btnDisconnect"
            android:layout_marginHorizontal="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/disconnect" />
    </LinearLayout>

    <EditText
        android:id="@+id/editMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textSize="15sp"
        android:text="@string/message" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSendViaSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="전송(Dis.Session)" />

        <Button
            android:id="@+id/btnSendViaSocket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/socket" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvChattingArea"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/black"
        android:textColor="@color/white"
        android:text="@string/hello" />

</LinearLayout>